---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT011 `pytest.raises(ZeroDivisionError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:13:24
   |
13 |     with pytest.raises(ZeroDivisionError):
   |                        ^^^^^^^^^^^^^^^^^
   |

PT011 `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:25:24
   |
25 |     with pytest.raises(ValueError):
   |                        ^^^^^^^^^^
   |

PT011 `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:28:43
   |
28 |     with pytest.raises(expected_exception=ValueError):
   |                                           ^^^^^^^^^^
   |

PT011 `pytest.raises(socket.error)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:31:24
   |
31 |     with pytest.raises(socket.error):
   |                        ^^^^^^^^^^^^
   |

PT011 `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:42:24
   |
42 |     with pytest.raises(ValueError, match=None):
   |                        ^^^^^^^^^^
   |

PT011 `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:45:24
   |
45 |     with pytest.raises(ValueError, match=""):
   |                        ^^^^^^^^^^
   |

PT011 `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:48:24
   |
48 |     with pytest.raises(ValueError, match=f""):
   |                        ^^^^^^^^^^
   |

PT011 `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:62:24
   |
62 |     with pytest.raises(ValueError, check=None):
   |                        ^^^^^^^^^^
   |
